OLCS-10918 - fixing alignment of actioned buttons when different HTML tags are used

--- a/assets/_styles/core/buttons.scss
+++ b/assets/_styles/core/buttons.scss
@@ -84,7 +84,6 @@ button {
   text-decoration: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  vertical-align: top;
   -webkit-appearance: none;
   cursor: pointer;
   @include ie-lte(8) {
